--- a/new_talk/pubspec.yaml
+++ b/new_talk/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   modal_progress_hud: ^0.1.3
+  provider: ^4.0.4
 
 dev_dependencies:
   flutter_test:
