--- a/new_talk/pubspec.yaml
+++ b/new_talk/pubspec.yaml
@@ -52,6 +52,9 @@ flutter:
     - family: Montserrat-Regular
       fonts:
         - asset: assets/fonts/Montserrat-Regular.ttf
+    - family: Montserrat-Medium
+      fonts:
+        - asset: assets/fonts/Montserrat-Medium.ttf
     - family: Nunito-Regular
       fonts:
         - asset: assets/fonts/Nunito-Regular.ttf
